# theodin-universal

./: .gitignore  README.md  pyproject.toml
.github/workflows/: experiments.yml
docs/: EXPERIMENT_DESIGN.md  SETUP.md
results/: dashboard.html
scripts/: benchmark_all.py  collect_cloud_data.py  generate_dashboard.py  run_experiment.py
