[project]
name = "theodin-universal"
version = "0.1.0"
description = "Universal code improvement demonstrations with theodin"
requires-python = ">=3.11"
dependencies = [
    "theodin @ file:///home/ctr26/projects/theodin",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
